proj1/tests/correct/class_after_def.py
def f():
	print 1
class name:
	f()

